--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -214,18 +214,27 @@ h6,
 /*** Hero Header ***/
 .hero-header {
     margin-bottom: 6rem;
-    padding: 18rem 0;
+    padding: 14rem 0;
     background-color: var(--light) !important;
-    /* background-image: url('https://wallpapercrafter.com/desktop/125334-Hyouka-Chitanda-Eru-white-background-anime-anime-girls-Oreki-Houtarou.png') !important;
+    background-image: url('https://wallpapercrafter.com/desktop/125334-Hyouka-Chitanda-Eru-white-background-anime-anime-girls-Oreki-Houtarou.png') !important;
     background-position: center;
     min-height: 100vh;
-    background-size: cover; */
+    background-size: cover;
+    object-fit: cover;
 }
 
 @media (max-width: 991.98px) {
     .hero-header {
         padding: 6rem 0 9rem 0;
+        background-position: left;
     }
+    .hero-header h1 {
+       margin-top: 7em;
+       text-shadow: 1px 1px 1px;
+    }
+        .hero-header a {
+            margin-bottom: 15px;
+        }
 }
 
 
