--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -215,12 +215,12 @@ h6,
 .hero-header {
     margin-bottom: 6rem;
     padding: 14rem 0;
-    background-color: var(--dark) !important;
-    /* background-image: url('https://wallpapercrafter.com/desktop/125334-Hyouka-Chitanda-Eru-white-background-anime-anime-girls-Oreki-Houtarou.png') !important;
-    background-position: center; */
-    /* min-height: 100vh;
+    /* background-color: var(--dark) !important; */
+    background-image: url('https://wallpapercrafter.com/desktop/125334-Hyouka-Chitanda-Eru-white-background-anime-anime-girls-Oreki-Houtarou.png') !important;
+    background-position: center;
+    min-height: 100vh;
     background-size: cover;
-    object-fit: cover; */
+    object-fit: cover;
 }
 
 @media (max-width: 991.98px) {
